fix: leaderboard center alignment and disable confetti on ties

--- a/src/pages/Play/components/GameFinishedScreen/LeaderboardScreen.module.css
+++ b/src/pages/Play/components/GameFinishedScreen/LeaderboardScreen.module.css
@@ -82,7 +82,7 @@
 
 .tableHeader {
   display: grid;
-  grid-template-columns: 50px 1fr 60px;
+  grid-template-columns: 1fr 2fr 1fr;
   align-items: center;
   padding: 0 15px 15px;
   font-size: 1rem;
@@ -97,10 +97,10 @@
 }
 .tableHeader span:nth-child(2) {
   text-align: center;
+  padding-left: 20px; /* Offset slightly to balance the avatar */
 }
 .tableHeader span:nth-child(3) {
-  text-align: right;
-  padding-right: 5px;
+  text-align: center;
 }
 
 .tableBody {
@@ -112,7 +112,7 @@
 
 .tableRow {
   display: grid;
-  grid-template-columns: 50px 1fr 60px;
+  grid-template-columns: 1fr 2fr 1fr;
   align-items: center;
   padding: 0 5px;
 }
@@ -149,8 +149,7 @@
 .scoreCol {
   font-weight: 400;
   font-size: 1.1rem;
-  text-align: right;
-  padding-right: 5px;
+  text-align: center;
 }
 
 .buttonGroup {
@@ -222,13 +221,13 @@
     padding-bottom: 8px;
     margin-bottom: 10px;
     font-size: 0.9rem;
-    grid-template-columns: 35px 1fr 45px;
+    grid-template-columns: 1fr 2fr 1fr;
   }
   .tableBody {
     gap: 8px;
   }
   .tableRow {
-    grid-template-columns: 35px 1fr 45px;
+    grid-template-columns: 1fr 2fr 1fr;
   }
   .rowAvatar {
     width: 32px;
